=========================================================================
CHANGE LOG
=========================================================================

2013-04-26 Thomas Holder <thomas.holder@schrodinger.com>

	* refactored importing.fetch

	* spectrum enhancements (arbitrary expressions and colors)

	* pymol2.cmd2: implement proxy pattern

	* chempy model improvements

	* fix bg_color, which sometimes did not apply instantly

2013-04-17 Thomas Holder <thomas.holder@schrodinger.com>

	* support full path for "matrix" argument
	  https://sourceforge.net/p/pymol/patches/4/

	* use PyMOL API in pymol.rpc module
	  https://sourceforge.net/p/pymol/patches/3/

	* doc string for cmd.find_pairs
	  https://sourceforge.net/p/pymol/patches/2/

2013-04-12 Blaine Bell <blaine.bell@schrodinger.com>, Thomas Holder <thomas.holder@schrodinger.com>

	* rotate ANISOU vector when transforming objects

	* new command: split_chains

	* fix create/extract bug with movie

	* fixed cartoon VBO memory leak

	* always draw rounded caps with sticks shaders

	* several shader fixes and performance improvements

	* fixed screen z-offset for labels

2013-03-22 Blaine Bell <blaine.bell@schrodinger.com>, Thomas Holder <thomas.holder@schrodinger.com>

	* improved rendering performance using shaders, including
	  dynamically updated shaders based on settings
	  (see data/shaders directory)

	* implemented shaders for menus, labels, selection indicators,
	  background, and other graphics that were not using shaders.

	* consolidated textures used for labels and selection indicators
	  to one texture, which helps performance

	* added memory checking to help avoid crashing when memory is
	  low or not available

	* cleaned up code base, took out extraneous preprocessor code and
	  code that was not used.

	* refactor pmg_tk.Settings

	* Do not clear atom names with chempy.champ.assign.amber99

	* fix some plugin manager exception handling

	* fix create with name=None
